--- a/.gitignore
+++ b/.gitignore
@@ -400,3 +400,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,vim,jetbrains,visualstudiocode,python
+
+bin/
+lib64
+pyvenv.cfg
